# streaming-memory

./: pyproject.toml
deployments/: __init__.py  family_assistant.py  family_assistant_supermemory.py  supermemory_test.py  websocket_agent.py
examples/: dad_memories.json
frontend/src/: AryanDemo.jsx  Demo.jsx  Landing.jsx  VoiceWebSocket.jsx  main.jsx
frontend/src/components/demo/: ConversationPane.jsx  EnginePane.jsx  RevisionTimeline.jsx  SettingsPanel.jsx  TerminalContextPanel.jsx  TokenFootprint.jsx
frontend/src/components/voice/: BottomControls.jsx  IdleScreen.jsx  PromptBanner.jsx  ResponseSection.jsx  ThinkingSection.jsx  TranscriptBubble.jsx  index.js  useVoiceAgent.js
frontend/src/demo/: config.js  context.js
frontend/src/hooks/: useStreamingMemoryDemo.js  useWebSocketVoice.js
scripts/: ingest_supermemory.py  preprocess_aryan_summaries.py
scripts/experiments/: adversarial_neuron_test.py  concept_neurons.py  measure_sparsity.py  test_neuron_specificity.py  true_adversarial_test.py
streaming_memory/: debug.py  protocol.py  service.py  supermemory_pool.py  voice_agent.py
